<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#33B5E5"
        android:textSize="24sp"
        android:textStyle="bold" 
        android:text="@string/title_activity_aire"
/>

    
        <RadioGroup
        android:id="@+id/radioRectCercle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <RadioButton
            android:id="@+id/radioButtonRectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rectangle" />

        <RadioButton
            android:id="@+id/radioButtonDisque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/disque" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtViewLongueur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longueur" />

        <EditText
            android:id="@+id/editTextLongueur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtViewLargeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/largeur" />

        <EditText
            android:id="@+id/editTextLargeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat" />

        <TextView
            android:id="@+id/resAire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center_horizontal"
            android:text="@string/interrogation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/reinitialiser"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FF9494"
            android:text="@string/reinitialiser" />

        <Button
            android:id="@+id/calculer"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#C5E26D"
            android:text="@string/calculer" />
    </LinearLayout>

</LinearLayout>